--- a/config.yaml
+++ b/config.yaml
@@ -121,7 +121,7 @@ params:
         favicon32x32: "favicon-32x32.png"
         apple_touch_icon: "apple-touch-icon.png"
         safari_pinned_tab: "safari-pinned-tab.svg"
-        theme_color: "#F6B933"
+        theme_color: "#ffffff"
 
     # cover:
     #     hidden: true # hide everywhere but not in structured data
